@@ -4,7 +4,9 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -24,18 +26,21 @@ package com.oracle.svm.core.genscavenge;
 
 import org.graalvm.compiler.api.replacements.Fold;
 import org.graalvm.compiler.word.Word;
-import org.graalvm.nativeimage.Feature.FeatureAccess;
+import org.graalvm.nativeimage.hosted.Feature.FeatureAccess;
 import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.Platforms;
 import org.graalvm.word.UnsignedWord;
 import org.graalvm.word.WordFactory;
 
 import com.oracle.svm.core.SubstrateUtil;
+import com.oracle.svm.core.annotate.Uninterruptible;
 import com.oracle.svm.core.heap.PhysicalMemory;
 import com.oracle.svm.core.log.Log;
 import com.oracle.svm.core.option.XOptions;
 import com.oracle.svm.core.util.AtomicUnsigned;
+import com.oracle.svm.core.util.UnsignedUtils;
 import com.oracle.svm.core.util.UserError;
+import com.oracle.svm.core.util.VMError;
 
 /**
  * HeapPolicy contains different GC policies including size of memory chunk, large array threshold,
@@ -76,8 +81,8 @@ public class HeapPolicy {
 
         Object result;
         try {
-            result = policy.newInstance();
-        } catch (InstantiationException | IllegalAccessException ex) {
+            result = policy.getDeclaredConstructor().newInstance();
+        } catch (Exception ex) {
             throw UserError.abort("policy " + className + " cannot be instantiated.");
         }
 
@@ -90,17 +95,28 @@ public class HeapPolicy {
     /*
      * Instance field access methods.
      */
-
     CollectOnAllocationPolicy getCollectOnAllocationPolicy() {
         return collectOnAllocationPolicy;
     }
 
-    public static Word getProducedHeapChunkZapValue() {
-        return producedHeapChunkZapValue;
+    @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+    public static Word getProducedHeapChunkZapWord() {
+        return (Word) producedHeapChunkZapWord;
     }
 
-    public static Word getConsumedHeapChunkZapValue() {
-        return consumedHeapChunkZapValue;
+    @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+    public static int getProducedHeapChunkZapInt() {
+        return (int) producedHeapChunkZapInt.rawValue();
+    }
+
+    @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+    public static Word getConsumedHeapChunkZapWord() {
+        return (Word) consumedHeapChunkZapWord;
+    }
+
+    @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+    public static int getConsumedHeapChunkZapInt() {
+        return (int) consumedHeapChunkZapInt.rawValue();
     }
 
     /*
@@ -151,6 +167,24 @@ public class HeapPolicy {
         return k(k(k(bytes)));
     }
 
+    /* Option sanity checking. */
+
+    private static int getMaximumHeapSizePercent() {
+        final int result = HeapPolicyOptions.MaximumHeapSizePercent.getValue();
+        VMError.guarantee((result >= 0) && (result <= 100), "MaximumHeapSizePercent should be in [0 ..100]");
+        return result;
+    }
+
+    private static int getMaximumYoungGenerationSizePercent() {
+        final int result = HeapPolicyOptions.MaximumYoungGenerationSizePercent.getValue();
+        VMError.guarantee((result >= 0) && (result <= 100), "MaximumYoungGenerationSizePercent should be in [0 ..100]");
+        return result;
+    }
+
+    private static UnsignedWord getAllocationBeforePhysicalMemorySize() {
+        return WordFactory.unsigned(HeapPolicyOptions.AllocationBeforePhysicalMemorySize.getValue());
+    }
+
     /* Memory configuration */
 
     private static UnsignedWord maximumYoungGenerationSize;
@@ -162,21 +196,28 @@ public class HeapPolicy {
         final Log trace = Log.noopLog().string("[HeapPolicy.getMaximumYoungGenerationSize:");
         if (maximumYoungGenerationSize.aboveThan(WordFactory.zero())) {
             /* If someone has set the young generation size, use that value. */
-            trace.string("  returns: ").unsigned(maximumYoungGenerationSize).string(" ]").newline();
+            trace.string("  returns maximumYoungGenerationSize: ").unsigned(maximumYoungGenerationSize).string(" ]").newline();
             return maximumYoungGenerationSize;
         }
         final XOptions.XFlag xmn = XOptions.getXmn();
-        final UnsignedWord result;
         if (xmn.getEpoch() > 0) {
             /* If `-Xmn` has been parsed from the command line, use that value. */
-            result = WordFactory.unsigned(xmn.getValue());
-        } else {
-            /* The default value is just big enough. */
-            result = m(256);
+            trace.string("  -Xmn.epoch: ").unsigned(xmn.getEpoch()).string("  -Xmn.value: ").unsigned(xmn.getValue());
+            setMaximumYoungGenerationSize(WordFactory.unsigned(xmn.getValue()));
+            trace.string("  returns: ").unsigned(maximumYoungGenerationSize)
+                            .string(" ]").newline();
+            return maximumYoungGenerationSize;
         }
-        trace.string("  -Xmn.epoch: ").unsigned(xmn.getEpoch()).string("  -Xmn.value: ").unsigned(xmn.getValue())
-                        .string("  returns: ").unsigned(result).string("]").newline();
-        return result;
+        /* If none of those is set, use fraction of the maximum heap size. */
+        final UnsignedWord maxHeapSize = getMaximumHeapSize();
+        final UnsignedWord youngSizeAsFraction = maxHeapSize.unsignedDivide(100).multiply(getMaximumYoungGenerationSizePercent());
+        /* But not more than 256MB. */
+        final UnsignedWord maxSize = m(256);
+        final UnsignedWord youngSize = (youngSizeAsFraction.belowOrEqual(maxSize) ? youngSizeAsFraction : maxSize);
+        trace.string("  youngSize: ").unsigned(youngSize)
+                        .string(" ]").newline();
+        /* But do not cache the result as it is based on values that might change. */
+        return youngSize;
     }
 
     /** Set the maximum young generation size, returning the previous value. */
@@ -187,35 +228,31 @@ public class HeapPolicy {
     }
 
     /** The maximum size of the heap as an UnsignedWord. */
+    @SuppressWarnings("try")
     public static UnsignedWord getMaximumHeapSize() {
-        final Log trace = Log.noopLog().string("[HeapPolicy.getMaximumHeapSize:");
         if (maximumHeapSize.aboveThan(WordFactory.zero())) {
             /* If someone has set the maximum heap size, use that value. */
-            trace.string("  returns: ").unsigned(maximumHeapSize).string(" ]").newline();
             return maximumHeapSize;
         }
-        final UnsignedWord result;
         final XOptions.XFlag xmx = XOptions.getXmx();
         if (xmx.getEpoch() > 0) {
-            /* If `-Xmx` has been parsed from the command line, use that value. */
-            result = WordFactory.unsigned(xmx.getValue());
-        } else {
-            /*
-             * Otherwise, the maximum size of the heap is a fraction of the size of the physical
-             * memory. I choose not to worry about overflow on the multiply.
-             */
-            final int maximumHeapSizePercent = HeapPolicyOptions.MaximumHeapSizePercent.getValue();
-            result = PhysicalMemory.size().multiply(maximumHeapSizePercent).unsignedDivide(100);
+            /* If `-Xmx` has been parsed from the command line, use that value and cache it. */
+            HeapPolicy.setMaximumHeapSize(WordFactory.unsigned(xmx.getValue()));
+            return maximumHeapSize;
         }
-        maximumHeapSize = result;
-        if (trace.isEnabled()) {
-            trace.string("  -Xmx.epoch: ").unsigned(xmx.getEpoch()).string("  -Xmx.value: ").unsigned(xmx.getValue())
-                            .string("  MaximumHeapSizePercent: ").unsigned(HeapPolicyOptions.MaximumHeapSizePercent.getValue().intValue())
-                            .string("  PhysicalMemory.size(): ").unsigned(PhysicalMemory.size())
-                            .newline();
-            trace.string("  returns: ").unsigned(result).string("]").newline();
+        /*
+         * If the physical size is known yet, the maximum size of the heap is a fraction of the size
+         * of the physical memory.
+         */
+        if (PhysicalMemory.hasSize()) {
+            final UnsignedWord physicalMemorySize = PhysicalMemory.size();
+            final int maximumHeapSizePercent = getMaximumHeapSizePercent();
+            final UnsignedWord sizeFromPercent = physicalMemorySize.unsignedDivide(100).multiply(maximumHeapSizePercent);
+            /* Do not cache because `-Xmx` option parsing may not have happened yet. */
+            return sizeFromPercent;
         }
-        return result;
+        /* Otherwise return "unlimited". */
+        return UnsignedUtils.MAX_VALUE;
     }
 
     /** Set the maximum heap size, returning the previous value. */
@@ -239,18 +276,19 @@ public class HeapPolicy {
         UnsignedWord result;
         if (xms.getEpoch() > 0) {
             /* If `-Xms` has been parsed from the command line, use that value. */
-            result = WordFactory.unsigned(xms.getValue());
-        } else {
-            /* A default value chosen to delay the first full collection. */
-            result = getMaximumYoungGenerationSize().multiply(2);
+            trace.string("  -Xms.epoch: ").unsigned(xms.getEpoch()).string("  -Xms.value: ").unsigned(xms.getValue());
+            setMinimumHeapSize(WordFactory.unsigned(xms.getValue()));
+            trace.string("  returns: ").unsigned(minimumHeapSize).string(" ]").newline();
+            return minimumHeapSize;
         }
+        /* A default value chosen to delay the first full collection. */
+        result = getMaximumYoungGenerationSize().multiply(2);
         /* But not larger than -Xmx. */
         if (result.aboveThan(getMaximumHeapSize())) {
             result = getMaximumHeapSize();
         }
-        minimumHeapSize = result;
-        trace.string("  -Xms.epoch: ").unsigned(xms.getEpoch()).string("  -Xms.value: ").unsigned(xms.getValue())
-                        .string("  returns: ").unsigned(result).string("]").newline();
+        /* But do not cache the result as it is based on values that might change. */
+        trace.string("  returns: ").unsigned(result).string(" ]").newline();
         return result;
     }
 
@@ -301,15 +339,25 @@ public class HeapPolicy {
     }
 
     /* - The value to use for zapping produced chunks. */
-    private static final Word producedHeapChunkZapValue = WordFactory.unsigned(0xbaadbeefbaadbeefL);
+    private static final UnsignedWord producedHeapChunkZapInt = WordFactory.unsigned(0xbaadbeef);
+    private static final UnsignedWord producedHeapChunkZapWord = producedHeapChunkZapInt.shiftLeft(32).or(producedHeapChunkZapInt);
 
-    /* - The value to use for zapping. */
-    private static final Word consumedHeapChunkZapValue = WordFactory.unsigned(0xdeadbeefdeadbeefL);
+    /* - The value to use for zapping consumed chunks. */
+    private static final UnsignedWord consumedHeapChunkZapInt = WordFactory.unsigned(0xdeadbeef);
+    private static final UnsignedWord consumedHeapChunkZapWord = consumedHeapChunkZapInt.shiftLeft(32).or(consumedHeapChunkZapInt);
 
     static final AtomicUnsigned bytesAllocatedSinceLastCollection = new AtomicUnsigned();
 
     static UnsignedWord getBytesAllocatedSinceLastCollection() {
         return bytesAllocatedSinceLastCollection.get();
+    }
+
+    /** Sample the physical memory size, before the first collection but after some allocation. */
+    static void samplePhysicalMemorySize() {
+        if (HeapImpl.getHeapImpl().getGCImpl().getCollectionEpoch().equal(WordFactory.zero()) &&
+                        getBytesAllocatedSinceLastCollection().aboveThan(getAllocationBeforePhysicalMemorySize())) {
+            PhysicalMemory.size();
+        }
     }
 
     public HeapPolicy.HintGCPolicy getUserRequestedGCPolicy() {
