@@ -4,7 +4,9 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -56,7 +58,7 @@ public class HostedOptionParser implements HostedOptionProvider {
     private SortedMap<String, OptionDescriptor> allRuntimeOptions = new TreeMap<>();
 
     public HostedOptionParser(ImageClassLoader imageClassLoader) {
-        collectOptions(imageClassLoader.findSubclasses(OptionDescriptors.class), allHostedOptions, allRuntimeOptions);
+        collectOptions(imageClassLoader.findSubclasses(OptionDescriptors.class, true), allHostedOptions, allRuntimeOptions);
     }
 
     public static void collectOptions(List<Class<? extends OptionDescriptors>> optionsClasses, SortedMap<String, OptionDescriptor> allHostedOptions,
@@ -68,8 +70,8 @@ public class HostedOptionParser implements HostedOptionProvider {
 
             OptionDescriptors descriptors;
             try {
-                descriptors = optionsClass.newInstance();
-            } catch (InstantiationException | IllegalAccessException ex) {
+                descriptors = optionsClass.getDeclaredConstructor().newInstance();
+            } catch (Exception ex) {
                 throw shouldNotReachHere(ex);
             }
             for (OptionDescriptor descriptor : descriptors) {
